Left Shift + Numpad 1,2,3 not Aligning to Active #29932

Closed
opened 2012-01-20 03:59:12 +01:00 by Ryan King · 18 comments

Duplicates: #34659

%%%Steps to reproduce:
0) Load factory settings.

  1. Hit - - to trackball rotate the default cube to a funky angle.
  2. Hit [Alt+Space]- to change the Orientation to "Normal".
  3. Hit [Numpad 7] to see the Top View.
  4. Hit [Left Shift+Numpad 7] to see (what should be) the Normal's Top View.
  5. Hit [Right Shift+Numpad 7] to (definitely) see the Normal's Top View.

Good:
On Windows 7 32bit r42615 (blender.org official build), Step 4 shows the same view as Step 5.

  • Hitting [Numpad 7] calls bpy.ops.view3d.viewnumpad(type='TOP', align_active=False)
  • Hitting [Left Shift+Numpad 7] calls with align_active=True

On Linux 64 bit r43488 we see the same, correct behavior.

Bad:
On Windows 7 32 bit r43283 (graphicall.org build), Step 4 shows the same view as Step 3.

  • Hitting [Numpad 7] or [Left Shift+Numpad 7] calls with align_active=False
  • Hitting [Right Shift+Numpad 7] calls with align_active=True

On Windows 7 bit r43479 (homemade MinGW + SCons build)

  • Same behavior as r43283

The "User Preferences... > Input" bindings look identical for working and non-working versions.

Something else is messing with the Left Shift key's functionality.

  • rking%%%
**Duplicates**: #34659 %%%Steps to reproduce: 0) Load factory settings. 1) Hit - [x]- [x] to trackball rotate the default cube to a funky angle. 2) Hit [Alt+Space]- [x] to change the Orientation to "Normal". 3) Hit [Numpad 7] to see the Top View. 4) Hit [Left Shift+Numpad 7] to see (what should be) the Normal's Top View. 5) Hit [Right Shift+Numpad 7] to (definitely) see the Normal's Top View. Good: On Windows 7 32bit r42615 (blender.org official build), Step 4 shows the same view as Step 5. - Hitting [Numpad 7] calls bpy.ops.view3d.viewnumpad(type='TOP', align_active=False) - Hitting [Left Shift+Numpad 7] calls with align_active=True On Linux 64 bit r43488 we see the same, correct behavior. Bad: On Windows 7 32 bit r43283 (graphicall.org build), Step 4 shows the same view as Step 3. - Hitting [Numpad 7] or [Left Shift+Numpad 7] calls with align_active=False - Hitting [Right Shift+Numpad 7] calls with align_active=True On Windows 7 bit r43479 (homemade MinGW + SCons build) - Same behavior as r43283 The "User Preferences... > Input" bindings look identical for working and non-working versions. Something else is messing with the Left Shift key's functionality. - rking%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Can't notice unexpected behavior. Maybe it's something to with keymaps+preset fixes. Can you please check builds from http://builder.blender.org/download/ ?%%%

%%%Can't notice unexpected behavior. Maybe it's something to with keymaps+preset fixes. Can you please check builds from http://builder.blender.org/download/ ?%%%
Author

%%%Sergey,

Yes, I tried it on: blender-2.61-r43577-win32 , and got the same (bad) result.

Another data point: I see the same things when hitting the keys in the System Console with blender -d running:
pass on evt 217 val 1 # for Left Shift
pass on evt 216 val 1 # for Right Shift

So the User Preferences are the same, the "pass on evt" are the same, but bad results with the newer builds.%%%

%%%Sergey, Yes, I tried it on: blender-2.61-r43577-win32 , and got the same (bad) result. Another data point: I see the same things when hitting the keys in the System Console with `blender -d` running: pass on evt 217 val 1 # for Left Shift pass on evt 216 val 1 # for Right Shift So the User Preferences are the same, the "pass on evt" are the same, but bad results with the newer builds.%%%

%%%recall windows cant do shift+numpad, thaught we had some workaround but looking at view3d_keymap it seems not.%%%

%%%recall windows cant do shift+numpad, thaught we had some workaround but looking at view3d_keymap it seems not.%%%
Author

%%%Campbell,

Actually, on 2.61-official, it works fine for me.

Also, if I use Right Shift instead of Left Shift it works on all builds I've tried.

  • rking%%%
%%%Campbell, Actually, on 2.61-official, it works fine for me. Also, if I use Right Shift instead of Left Shift it works on all builds I've tried. - rking%%%

%%%That should be OK that left and right shift has got different codes. And everything works fine here on windows 7 64 bit with both left and right shift.
Maybe resetting to factory settings will help?%%%

%%%That should be OK that left and right shift has got different codes. And everything works fine here on windows 7 64 bit with both left and right shift. Maybe resetting to factory settings will help?%%%
Author

%%%Yes, I mean to say that in the correct functioning versions, the "evt" codes are the exact same as the incorrect functioning version.

By "reset to factory settings" do you simply mean "File > Load Factory Settings"? I have done that, and it is the same.

  • rking%%%
%%%Yes, I mean to say that in the correct functioning versions, the "evt" codes are the exact same as the incorrect functioning version. By "reset to factory settings" do you simply mean "File > Load Factory Settings"? I have done that, and it is the same. - rking%%%

%%%Well, as Campbell told there were some issues with Shift-Numpad combinations caused by windows crappiness, so the same event value for shift key doesn't actually mean the same code sequence came to blender when pressing Shift-Numpad7. What might be interesting to test is enable "Emulate Numpad" in User Preferences -> Input and hit Left Shift-7 and see if it works.%%%

%%%Well, as Campbell told there were some issues with Shift-Numpad combinations caused by windows crappiness, so the same event value for shift key doesn't actually mean the same code sequence came to blender when pressing Shift-Numpad7. What might be interesting to test is enable "Emulate Numpad" in User Preferences -> Input and hit Left Shift-7 and see if it works.%%%
Author

%%%Great question---Emulate Numpad hadn't even crossed my mind.

Yes, hitting Shift-7 ("&") works --- it causes the Transform Orientation to be used instead of the Global.

I should roll up my sleeves and get into the event handling code to figure out what is going on. I haven't had the time, yet.%%%

%%%Great question---Emulate Numpad hadn't even crossed my mind. Yes, hitting Shift-7 ("&") works --- it causes the Transform Orientation to be used instead of the Global. I should roll up my sleeves and get into the event handling code to figure out what is going on. I haven't had the time, yet.%%%

%%%Will look into it tomorrow. %%%

%%%Will look into it tomorrow. %%%

%%%Ryan King:
Do you release left shift key before 7 key?%%%

%%%Ryan King: Do you release left shift key before 7 key?%%%
Author

%%%Hehe... no.

Remember: I can get both shifts to work in 2.61-official, and I can get Right shift to work in SVN buidls.%%%

%%%Hehe... no. Remember: I can get both shifts to work in 2.61-official, and I can get Right shift to work in SVN buidls.%%%
Author

%%%Another user on IRC ran into this problem (and the exact workaround of using right-shift was required).

She is on 2.62-official, Win7 64 bit.

...so now I know I'm not going crazy.%%%

%%%Another user on IRC ran into this problem (and the exact workaround of using right-shift was required). She is on 2.62-official, Win7 64 bit. ...so now I know I'm not going crazy.%%%

%%%AGREED : Same problem here. Builds 44136(win32xp) official and official testbuild (45364) win32xp
I heard about this feature and could not get it to work for me! I use right shift for that. I got a logitec remote keyboard but I am pretty sure that's irrelevant! lol
Ryan King is right.%%%

%%%AGREED : Same problem here. Builds 44136(win32xp) official and official testbuild (45364) win32xp I heard about this feature and could not get it to work for me! I use right shift for that. I got a logitec remote keyboard but I am pretty sure that's irrelevant! lol Ryan King is right.%%%
%%%Closed duplicate report: http://projects.blender.org/tracker/index.php?func=detail&aid=31814&group_id=9&atid=498%%%
Member

%%%I also remember someone added a fix for numpad+shift for windows, but it is possible that unicode support has disabled it again.

Unassigning this one - we need a windows dev to tackle it. Will ask around.%%%

%%%I also remember someone added a fix for numpad+shift for windows, but it is possible that unicode support has disabled it again. Unassigning this one - we need a windows dev to tackle it. Will ask around.%%%

%%%Fixed in SVN r56285%%%

%%%Fixed in SVN r56285%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29932
No description provided.