Fix #29932 Left Shift + Numpad 1,2,3 not Aligning to Active

Intermediate Shift+Key messages were resetting modifier flags.